2005-08-13  Maynard Johnson <maynardj@us.ibm.com>
	 
	* gui/oprof_start.h:
	* libop/op_events.c:
	* libop/op_events.h:
	* libpp/op_header.cpp: change op_event.val field from u8 to u32 to
	  allow event numbers higher than 0X100.

2005-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h: 
	* libdb/db_insert.c:
	* libdb/db_manage.c: use a two step node allocation to ensure adding
	  a node will be sort of atomically visible in another process

2005-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h: clarify the way odb_get_iterator work
	* libpp/profile.cpp: use odb_get_iterator properly to ensure we account
	  zero relative offset. This fix a corner case when kernel module get
	  a sample at the first byte of their .text section.

2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: fix a race when changing the mode and owner
	  of copied file.
	* pp/oparchive.cpp: warn if a file can't be copied, avoid to copy 
	  inexisting image for anon mammping

2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* libop/op_config.h: add --cpu-buffer-size for 2.6

2005-08-10  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: preserve as many of file attributes and
	  owner we can when copying a file. This affected running oparchive
	  with root right allowing non root user to read all archived binaries.
	  Problem started in cvs the 2005-08-07

2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_anon.c:
	* daemon/opd_kernel.c: fix two scanf potential buffer overflow

2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/cpu_type.c: fix #1254390, problem and solution
	  by Thomas Kho <tkho@users.sourceforge.net>

	* module/oprofile.c:
	* module/oprofile.h: fix a compilation problem with gcc <= 3.3. It's